# carlabev-lab

./: .gitignore  README.md  debug.py  eval.py  main.py  pyproject.toml  run.sh  test.py  test.sh  train.py
bkup/bkup-runs/cnn-ppo-discrete-carlabev-barnard-test/: events.out.tfevents.1759138064.n1136.barnard.hpc.tu-dresden.de.478163.0
scripts/: analysis_utils.py  analyze_pruning.py  clean_stale_trials.py  debug_map_graph.ipynb  design_map_graph.ipynb  design_scene.ipynb  load_results.py  optuna_tuner.py  planning_graph.pkl  plot_experiments.py  result_analysis.ipynb  route_generator.ipynb  slurm_phase1_launcher.sh  slurm_phase2a_launcher.sh  slurm_phase2b_launcher.sh  slurm_phase3_launcher.sh  town01-25.pkl  town01-center.pkl  town01-left.pkl  town01-ped.pkl  town01-vehicles-100.pkl  town01-vehicles-200.pkl  town01-vehicles-2lanes-100.pkl  town01-vehicles-50.pkl  town01-vehicles.pkl  town01_centerline.pkl
src/agents/: __init__.py  cnn_ppo.py  muzero.py  ppo.py  ppo_vector.py  sac.py
src/agents/muzero/: mcts_nav.py  (+1 more)
src/config/: base_config.py  experiment_loader.py
src/envs/: __init__.py  carlabev.py
src/eval/: eval_ppo.py
src/evals/: dqn_eval.py
src/exp/: __init__.py  carlabev_hpc.py  cnn_ppo_discrete_carlabev.py  cnn_ppo_discrete_traffic.py  debug_carlabev.py  dqn_carlabev.py  ppo_carlabev.py  sac_carlabev.py  vector_ppo_discrete_carlabev.py
src/trainers/: __init__.py  dqn.py  muzero.py  ppo.py  sac.py  utils.py
src/tuning/: optuna_analysis.py  optuna_tuner.py  optuna_utils.py  phase1.py  phase2a.py  phase2b.py  phase3.py
src/utils/: logger.py
(+7 files in other folders)
