[project]
name = "carlabev-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "CarlaBEV",
    "dotenv>=0.9.9",
    "moviepy>=2.2.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "scipy>=1.16.0",
    "setuptools==80",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tyro>=0.9.26",
]

[tool.uv.sources]
#MAC
#CarlaBEV = {path = "/Users/danielmtz/Data/projects/driverless/carlabev-env", editable= true}

#MSI
CarlaBEV = {path = "/home/danielmtz/Data/projects/carlabev", editable= true}

#HPC
#CarlaBEV = {path = "/data/horse/ws/dama898h-danielmtz/carlabev", editable= true}
